2007-11-13  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/ppc/vm/cppInterpreter_ppc.cpp
	(generate_native_entry): Removed an extraneous call to
	InterpreterRuntime::prepare_native_call().

2007-11-12  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Fixed tools.jar and rt.jar to include all directories
	built under lib/.
	* Makefile.in: Regenerated.

2007-11-12  Lillian Angel  <langel@redhat.com>

	* .hgignore: Updated
	* Makefile.am
	(ICEDTEA_ENV): Removed GENSRCDIR.
	* Makefile.in: Regenerated
	* generated/*: Updated files with changes specified in patch.
	* patches/icedtea-ecj.patch
	(GenerateCharacter.java): Patched to always insert the same date and
	non-specific information, so file is not modified with every build.

2007-11-12  Lillian Angel  <langel@redhat.com>

	* patches/icedtea-ecj.patch: Updated. Added bootclasspath to
	langtools/make/build.xml. Resolves EnumSet error.

2007-11-12  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/build/linux/platform_ppc: New file.
	* ports/hotspot/build/linux/platform_ppc64: Likewise.
	* ports/hotspot/build/linux/makefiles/ppc.make: Likewise.
	* ports/hotspot/build/linux/makefiles/ppc64.make: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/assembler_ppc.inline.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/bytecodeInterpreter_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/bytecodeInterpreter_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/bytecodeInterpreter_ppc.inline.hpp:
	Likewise.
	* ports/hotspot/src/cpu/ppc/vm/bytecodes_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/bytecodes_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/bytes_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/codeBuffer_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/copy_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/cppInterpreterGenerator_ppc.hpp:
	Likewise.