@@ -1,6 +1,12 @@
 2007-11-13  Gary Benson  <gbenson@redhat.com>
 
 	* ports/hotspot/src/cpu/ppc/vm/cppInterpreter_ppc.cpp
+	(generate_normal_entry, generate_native_entry):
+	Reload the method pointer after potential safepoints.
+
+2007-11-13  Gary Benson  <gbenson@redhat.com>
+
+	* ports/hotspot/src/cpu/ppc/vm/cppInterpreter_ppc.cpp
 	(generate_native_entry): Removed an extraneous call to
 	InterpreterRuntime::prepare_native_call().
 
